--- a/src/i18n/locales/ar/header.json
+++ b/src/i18n/locales/ar/header.json
@@ -15,6 +15,8 @@
   "index": "المؤشر",
   "uSShareCFD": "تداول العقود مقابل الفروقات",
   "cryptocurrencies": "مسؤولية الشركة",
+  "YFProductRules": "تفاصيل المنتج WGG",
+  "KJProductRules": "تفاصيل منتج KUJI",
   "platform": "منصة التداول",
   "MT4Overview": "نظرة عامة على منصة MT4",
   "MT4PCDownload": "تحميل نسخة MT4 للكمبيوتر الشخصي",
