--- a/src/i18n/locales/cn/header.json
+++ b/src/i18n/locales/cn/header.json
@@ -15,6 +15,8 @@
   "index": "指数",
   "uSShareCFD": "美股CFD",
   "cryptocurrencies": "加密货币",
+  "YFProductRules": "盈富产品合约细则",
+  "KJProductRules": "酷极产品合约细则",
   "platform": "交易平台",
   "MT4Overview": "MT4 平台概览",
   "MT4PCDownload": "MT4 电脑版下载",
