--- a/src/i18n/locales/id/header.json
+++ b/src/i18n/locales/id/header.json
@@ -15,6 +15,8 @@
   "index": "indeks",
   "uSShareCFD": "US Share CFD",
   "cryptocurrencies": "Mata uang Crypto",
+  "YFProductRules": "Detail Produk WGG",
+  "KJProductRules": "Detail Produk KUJI",
   "platform": "perdagangan",
   "MT4Overview": "Tinjauan platform MT4",
   "MT4PCDownload": "Unduhan versi MT4 PC",
