--- a/src/i18n/locales/ms/header.json
+++ b/src/i18n/locales/ms/header.json
@@ -15,6 +15,8 @@
   "index": "Index",
   "uSShareCFD": "US Share CFD",
   "cryptocurrencies": "cryptocurrencies",
+  "YFProductRules": "Butiran Produk WGG",
+  "KJProductRules": "Butiran Produk KUJI",
   "platform": "Platform",
   "MT4Overview": "MT4 platform Overview",
   "MT4PCDownload": "Muat turun MT4 versi PC",
