--- a/src/i18n/locales/vi/header.json
+++ b/src/i18n/locales/vi/header.json
@@ -15,6 +15,8 @@
   "index": "Mục lục",
   "uSShareCFD": "CDC cổ phần Mỹ",
   "cryptocurrencies": "Tiền kỹ thuật",
+  "YFProductRules": "Chi tiết sản phẩm WGG",
+  "KJProductRules": "Chi tiết sản phẩm KUJI",
   "platform": "Giao dịch",
   "MT4Overview": "Tổng quan về",
   "MT4PCDownload": "Tải phiên bản",
